# god_bot

./: README.md
h_robot_planner/: CMakeLists.txt  package.xml
h_robot_planner/launch/: omni_gz.launch.py
h_robot_planner/models/omni_bot/: model.config  model.sdf
h_robot_planner/scripts/trajectory_genrator/: Readme.md  spline_catmull_rom.hpp  spline_demo  trajectory_using_splines.cpp
h_robot_planner/src/: t1.py
h_robot_planner/worlds/: omni_world.sdf
